Fix issue where sometimes lines on event pages following date or RSVP info were oddly aligned / not wrapping, due to extraneous margins in some of their contents.  Make margins 0 for elements fields that were getting margins.  I'm committing the fix for the lines with dates kinda blindly since I'm not seeing that on my Windows browsers.  Will confirm w/ Quinn.  Refs #172.

--- a/libsite7b/css/style.css
+++ b/libsite7b/css/style.css
@@ -2057,6 +2057,16 @@ section.pane .workshop-orientation-link {margin-top: .6em;}
 @media screen and (max-width:640px) {
   #block-views-libraries_events-block_1 { margin-top: -80px; }
 }
+
+/* prevent ugly float issues where subsequent labels aren't wrapping nicely due to unnecessary margins */
+.field-name-field-rsvp-url p {
+  margin: 0;
+}
+.field-name-field-event-date .date-display-single, .field-name-field-event-date .date-display-start, .field-name-field-event-date .date-display-end {
+  margin: 0;
+}
+
+
 /* end upcoming events */
 
 /* blog 'submitted by + date' formatting */
